update git config

--- a/git.conf
+++ b/git.conf
@@ -1,7 +1,6 @@
 [user]
-	email = hello@kelton.ca
-	name = Kelton Kowalchuk
-[pull]
-	rebase = false
-[init]
-	defaultBranch = main
+	email = adriano.benin@gmail.com
+	name = Adriano Benin
+[alias]
+	co = checkout
+	st = status
